# chip-8_emu

./: .gitignore  C8Interpreter.py  Makefile  PySlow8.py  README.md  main.cpp  main.py  requirements.txt
pyslow8/: main.py
rusty8/: Cargo.toml
rusty8/src/: main.rs
sea8/: Makefile  main.c
