# compile like this: 
# $ RUSTFLAGS="-C target-cpu=native" cargo build --release

[package]
name = "rusty8"
version = "0.1.0"
edition = "2024"

[dependencies]
minifb = "0.28"
raw-cpuid = "11.6.0"
rand = "0.9.2"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = "symbols"

[profile.profile]
inherits = "release"
debug = 1
lto = "thin"