[package]
name = "rusty8"
version = "0.1.0"
edition = "2024"

[dependencies]
minifb = "0.28"
raw-cpuid = "11.6.0"
rand = "0.9.2"

[profile.release]
codegen-units = 1
lto = true
strip = "symbols"

[profile.profile]
inherits = "release"
lto = "thin"
debug = 1


# samply record .\target\profile\rusty8.exe ..\benchmark_roms\1dcell.ch8
# slow:
# core::iter::range::impl$6::next
# core::iter::range::impl$5::spec_next